Fixed the navbar spacing

--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@ body{
 #home {
    display: inline-block;
     width: 50px;
-    margin: 0 75em 0 10px;
+    margin: 0 72em 0 10px;
     color: #E47EB8;
     font-family: 'Inter', sans-serif;
 }
